# MazeOfGalious

./: .gitignore  Brewfile  CMakeLists.txt  readme.txt
cmake/: FindHomebrew.cmake  FindSDL.cmake  FindSDL2.cmake  FindSDL2_sound.cmake  FindSDL_sound.cmake
sources/: MOGtypes.h  debug-report.cpp  gameaux.cpp  gamecycle.cpp  gameinteractions.cpp  gametiles.cpp  ingamecycle.cpp  keyboard.cpp  main.cpp  shrines.cpp  sound.cpp
website/: index.html  lib-min.js  lib.js  passwords.html  style-min.css  style.css
